IAS-LangLib/src/lang/script/parser/AutoGenParser.output
Terminals unused in grammar

   T_NONE
   "CALL"


State 108 conflicts: 1 shift/reduce
State 265 conflicts: 1 shift/reduce


Grammar

    0 $accept: globals "end of file"

    1 globals: %empty
    2        | globals global

    3 global: import
    4       | typeDefinition
    5       | program
    6       | namespaceDeclaration

    7 import: "IMPORT" qname ";"

    8 typeDefinition: "DEFINE" T_SYMBOL ":" T_STRING "AS" typeDefinitionPropertiesEnclosed ";"
    9               | "DEFINE" T_SYMBOL ":" T_STRING "AS" "EXTENSION" "OF" baseType typeDefinitionPropertiesEnclosed ";"
   10               | "DEFINE" T_SYMBOL ":" T_STRING ";"
   11               | "DEFINE" T_SYMBOL ":" T_STRING "AS" "EXTENSION" "OF" baseType ";"

   12 baseType: T_SYMBOL
   13         | T_SYMBOL ":" T_STRING

   14 typeDefinitionPropertiesEnclosed: "BEGIN" typeDefinitionProperties "END"
   15                                 | "BEGIN" "END"

   16 typeDefinitionProperties: typeDefinitionProperties property ";"
   17                         | %empty

   18 property: T_SYMBOL "AS" T_SYMBOL
   19         | T_SYMBOL "AS" T_SYMBOL ":" T_STRING
   20         | T_SYMBOL "AS" "ARRAY" "OF" T_SYMBOL
   21         | T_SYMBOL "AS" "ARRAY" "OF" T_SYMBOL ":" T_STRING

   22 namespaceDeclaration: "CREATE" "ALIAS" T_STRING "AS" T_STRING ";"

   23 program: "PROGRAM" qname parametersListPar statementsListBeginEnd ";"
   24        | "PROGRAM" qname parametersListPar programResult statementsListBeginEnd ";"
   25        | "PROGRAM" qname parametersListPar "EXTERNAL" T_STRING externalParametersPar ";"
   26        | "PROGRAM" qname parametersListPar programResult "EXTERNAL" T_STRING externalParametersPar ";"

   27 programResult: "RETURNS" T_SYMBOL
   28              | "RETURNS" T_SYMBOL ":" T_STRING
   29              | "RETURNS" "ARRAY" "OF" T_SYMBOL
   30              | "RETURNS" "ARRAY" "OF" T_SYMBOL ":" T_STRING

   31 parametersListPar: "(" parametersList ")"
   32                  | "(" ")"

   33 parametersList: parametersList "," declaration
   34               | declaration

   35 statementsListBeginEnd: "BEGIN" statementsList "END"

   36 statementsList: statementsList statement ";"
   37               | statementsList declaration ";"
   38               | %empty

   39 declaration: "VAR" T_SYMBOL "AS" T_SYMBOL
   40            | "VAR" T_SYMBOL "AS" T_SYMBOL ":" T_STRING
   41            | "VAR" T_SYMBOL "AS" "ARRAY" "OF" T_SYMBOL
   42            | "VAR" T_SYMBOL "AS" "ARRAY" "OF" T_SYMBOL ":" T_STRING

   43 statement: statementsListBeginEnd
   44          | assignment
   45          | condassign
   46          | merge
   47          | forLoop
   48          | whileLoop
   49          | with
   50          | ifThenElse
   51          | index
   52          | call
   53          | external
   54          | create
   55          | delete
   56          | return
   57          | sort
   58          | throw
   59          | tryCatch

   60 assignment: lvalue "= (assignment)" expr

   61 condassign: lvalue "?= (assignment)" xpathAccess

   62 merge: lvalue "MERGE" expr

   63 lvalue: xpathAccess

   64 expr: exprTerm

   65 exprTerm: exprTerm "+" exprTerm
   66         | exprTerm "-" exprTerm
   67         | exprFactor

   68 exprFactor: exprFactor "*" exprFactor
   69           | exprFactor "/" exprFactor
   70           | exprFactor "%" exprFactor
   71           | exprPrimaryOrXPath

   72 exprPrimaryOrXPath: exprPrimary
   73                   | xpathAccess

   74 exprPrimary: "(" expr ")"
   75            | T_INTEGER
   76            | T_FLOAT
   77            | T_STRING
   78            | T_BOOLEAN
   79            | T_NULL
   80            | "NEW" T_SYMBOL ":" T_STRING
   81            | "NEW" T_SYMBOL ":" T_STRING statementsListBeginEnd
   82            | "(" exprPrimaryOrXPath "AS" baseType ")"
   83            | "(" xpathAccess "OR" exprPrimaryOrXPath ")"
   84            | "(" logicalExpr "?" exprPrimaryOrXPath ":" exprPrimaryOrXPath ")"
   85            | qname exprListPar
   86            | "COPYOF" "(" xpathAccess ")"
   87            | "DETACH" "(" xpathAccess ")"
   88            | "-" exprPrimary
   89            | "SIZEOF" "(" xpathAccess ")"
   90            | "TYPE" "(" expr ")"
   91            | "TYPENS" "(" expr ")"
   92            | "STRLEN" "(" expr ")"

   93 relationalOper: expr "==" expr
   94               | expr "<>" expr
   95               | expr "<=" expr
   96               | expr ">=" expr
   97               | expr "<" expr
   98               | expr ">" expr
   99               | expr "ISTYPE" "(" baseType ")"
  100               | expr "ISINSTANCE" "(" baseType ")"

  101 logicalExprPrimary: relationalOper
  102                   | "(" logicalExpr ")"
  103                   | "NOT" logicalExprPrimary
  104                   | "ISSET" "(" xpathAccess ")"
  105                   | "ISNULL" "(" xpathAccess ")"

  106 logicalExprFactor: logicalExprPrimary
  107                  | logicalExprFactor "AND" logicalExprFactor

  108 logicalExprTerm: logicalExprFactor
  109                | logicalExprTerm "OR" logicalExprTerm

  110 logicalExpr: logicalExprTerm

  111 xpathAccess: xpath
  112            | exprPrimary "." xpath

  113 xpath: xpath "." T_SYMBOL
  114      | xpath "." T_SYMBOL "[" expr "]"
  115      | xpath "." T_SYMBOL "[[" expr "]]"
  116      | T_SYMBOL
  117      | T_SYMBOL "[" expr "]"
  118      | T_SYMBOL "[[" expr "]]"

  119 with: "WITH" xpathAccess "DO" statement
  120     | "WITH" T_SYMBOL "AS" xpathAccess "DO" statement

  121 whileLoop: "WHILE" logicalExpr "DO" statement

  122 forLoop: "FOR" xpathAccess "= (assignment)" expr "TO" expr "DO" statement
  123        | "FOR" xpathAccess "= (assignment)" expr "TO" expr "STEP" expr "DO" statement

  124 ifThenElse: "IF" logicalExpr "THEN" statement
  125           | "IF" logicalExpr "THEN" statement "ELSE" statement

  126 call: qname exprListPar

  127 external: "EXTERNAL" qname exprListPar

  128 create: "CREATE" xpathAccess
  129       | "CREATE" xpathAccess statementsListBeginEnd

  130 delete: "DELETE" xpathAccess

  131 return: "RETURN"
  132       | "RETURN" expr

  133 throw: "THROW" expr

  134 sort: "SORT" xpathAccess "USING" qname

  135 index: "INDEX" xpathAccess "USING" xpathAccess

  136 tryCatch: "TRY" statementsListBeginEnd catchList

  137 catchList: catchList catch
  138          | catch

  139 catch: "CATCH" "(" declaration ")" statementsListBeginEnd

  140 exprListPar: "(" ")"
  141            | "(" exprList ")"

  142 exprList: exprList "," expr
  143         | expr

  144 externalParametersPar: "(" ")"
  145                      | "(" externalParameters ")"

  146 externalParameters: externalParameters "," T_STRING
  147                   | T_STRING

  148 qname: T_SYMBOL
  149      | qname "::" T_SYMBOL


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
T_NONE (258)
"IMPORT" (259) 7
"PROGRAM" (260) 23 24 25 26
"BEGIN" (261) 14 15 35
"END" (262) 14 15 35
"DEFINE" (263) 8 9 10 11
"EXTENSION" (264) 9 11
"ALIAS" (265) 22
"CALL" (266)
"SORT" (267) 134
"MERGE" (268) 62
"USING" (269) 134 135
"INDEX" (270) 135
"FOR" (271) 122 123
"TO" (272) 122 123
"STEP" (273) 123
"WHILE" (274) 121
"DO" (275) 119 120 121 122 123
"IF" (276) 124 125
"THEN" (277) 124 125
"ELSE" (278) 125
"RETURN" (279) 131 132
"THROW" (280) 133
"TRY" (281) 136
"CATCH" (282) 139
"WITH" (283) 119 120
"AS" (284) 8 9 11 18 19 20 21 22 39 40 41 42 82 120
"OF" (285) 9 11 20 21 29 30 41 42
"ARRAY" (286) 20 21 29 30 41 42
"RETURNS" (287) 27 28 29 30
"VAR" (288) 39 40 41 42
"AND" (289) 107
"OR" (290) 83 109
"NOT" (291) 103
"(" (292) 31 32 74 82 83 84 86 87 89 90 91 92 99 100 102 104 105 139
    140 141 144 145
")" (293) 31 32 74 82 83 84 86 87 89 90 91 92 99 100 102 104 105 139
    140 141 144 145
"NEW" (294) 80 81
"SIZEOF" (295) 89
"COPYOF" (296) 86
"DETACH" (297) 87
"CREATE" (298) 22 128 129
"DELETE" (299) 130
"EXTERNAL" (300) 25 26 127
"TYPE" (301) 90
"TYPENS" (302) 91
"ISSET" (303) 104
"ISNULL" (304) 105
"ISTYPE" (305) 99
"ISINSTANCE" (306) 100
"STRLEN" (307) 92
"[" (308) 114 117
"]" (309) 114 117
"[[" (310) 115 118
"]]" (311) 115 118
"+" (312) 65
"-" (313) 66 88
"*" (314) 68
"/" (315) 69
"%" (316) 70
"," (317) 33 142 146
":" (318) 8 9 10 11 13 19 21 28 30 40 42 80 81 84
"::" (319) 149
"." (320) 112 113 114 115
";" (321) 7 8 9 10 11 16 22 23 24 25 26 36 37
"==" (322) 93
"<" (323) 97
"<=" (324) 95
">" (325) 98
">=" (326) 96
"<>" (327) 94
"= (assignment)" (328) 60 122 123
"?= (assignment)" (329) 61
"?" (330) 84
T_SYMBOL (331) 8 9 10 11 12 13 18 19 20 21 27 28 29 30 39 40 41 42
    80 81 113 114 115 116 117 118 120 148 149
T_STRING (332) 8 9 10 11 13 19 21 22 25 26 28 30 40 42 77 80 81 146
    147
T_INTEGER (333) 75
T_FLOAT (334) 76
T_BOOLEAN (335) 78
T_NULL (336) 79


Nonterminals, with rules where they appear

$accept (82)
    on left: 0
globals (83)
    on left: 1 2, on right: 0 2
global (84)
    on left: 3 4 5 6, on right: 2
import (85)
    on left: 7, on right: 3
typeDefinition (86)
    on left: 8 9 10 11, on right: 4
baseType (87)
    on left: 12 13, on right: 9 11 82 99 100
typeDefinitionPropertiesEnclosed (88)
    on left: 14 15, on right: 8 9
typeDefinitionProperties (89)
    on left: 16 17, on right: 14 16
property (90)
    on left: 18 19 20 21, on right: 16
namespaceDeclaration (91)
    on left: 22, on right: 6
program (92)
    on left: 23 24 25 26, on right: 5
programResult (93)
    on left: 27 28 29 30, on right: 24 26
parametersListPar (94)
    on left: 31 32, on right: 23 24 25 26
parametersList (95)
    on left: 33 34, on right: 31 33
statementsListBeginEnd (96)
    on left: 35, on right: 23 24 43 81 129 136 139
statementsList (97)
    on left: 36 37 38, on right: 35 36 37
declaration (98)
    on left: 39 40 41 42, on right: 33 34 37 139
statement (99)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59, on right:
    36 119 120 121 122 123 124 125
assignment (100)
    on left: 60, on right: 44
condassign (101)
    on left: 61, on right: 45
merge (102)
    on left: 62, on right: 46
lvalue (103)
    on left: 63, on right: 60 61 62
expr (104)
    on left: 64, on right: 60 62 74 90 91 92 93 94 95 96 97 98 99 100
    114 115 117 118 122 123 132 133 142 143
exprTerm (105)
    on left: 65 66 67, on right: 64 65 66
exprFactor (106)
    on left: 68 69 70 71, on right: 67 68 69 70
exprPrimaryOrXPath (107)
    on left: 72 73, on right: 71 82 83 84
exprPrimary (108)
    on left: 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
    92, on right: 72 88 112
relationalOper (109)
    on left: 93 94 95 96 97 98 99 100, on right: 101
logicalExprPrimary (110)
    on left: 101 102 103 104 105, on right: 103 106
logicalExprFactor (111)
    on left: 106 107, on right: 107 108
logicalExprTerm (112)
    on left: 108 109, on right: 109 110
logicalExpr (113)
    on left: 110, on right: 84 102 121 124 125
xpathAccess (114)
    on left: 111 112, on right: 61 63 73 83 86 87 89 104 105 119 120
    122 123 128 129 130 134 135
xpath (115)
    on left: 113 114 115 116 117 118, on right: 111 112 113 114 115
with (116)
    on left: 119 120, on right: 49
whileLoop (117)
    on left: 121, on right: 48
forLoop (118)
    on left: 122 123, on right: 47
ifThenElse (119)
    on left: 124 125, on right: 50
call (120)
    on left: 126, on right: 52
external (121)
    on left: 127, on right: 53
create (122)
    on left: 128 129, on right: 54
delete (123)
    on left: 130, on right: 55
return (124)
    on left: 131 132, on right: 56
throw (125)
    on left: 133, on right: 58
sort (126)
    on left: 134, on right: 57
index (127)
    on left: 135, on right: 51
tryCatch (128)
    on left: 136, on right: 59
catchList (129)
    on left: 137 138, on right: 136 137
catch (130)
    on left: 139, on right: 137 138
exprListPar (131)
    on left: 140 141, on right: 85 126 127
exprList (132)
    on left: 142 143, on right: 141 142
externalParametersPar (133)
    on left: 144 145, on right: 25 26
externalParameters (134)
    on left: 146 147, on right: 145 146
qname (135)
    on left: 148 149, on right: 7 23 24 25 26 85 126 127 134 149


State 0

    0 $accept: . globals "end of file"

    $default  reduce using rule 1 (globals)

    globals  go to state 1


State 1

    0 $accept: globals . "end of file"
    2 globals: globals . global

    "end of file"  shift, and go to state 2
    "IMPORT"       shift, and go to state 3
    "PROGRAM"      shift, and go to state 4
    "DEFINE"       shift, and go to state 5
    "CREATE"       shift, and go to state 6

    global                go to state 7
    import                go to state 8
    typeDefinition        go to state 9
    namespaceDeclaration  go to state 10
    program               go to state 11


State 2

    0 $accept: globals "end of file" .

    $default  accept


State 3

    7 import: "IMPORT" . qname ";"

    T_SYMBOL  shift, and go to state 12

    qname  go to state 13


State 4

   23 program: "PROGRAM" . qname parametersListPar statementsListBeginEnd ";"
   24        | "PROGRAM" . qname parametersListPar programResult statementsListBeginEnd ";"
   25        | "PROGRAM" . qname parametersListPar "EXTERNAL" T_STRING externalParametersPar ";"
   26        | "PROGRAM" . qname parametersListPar programResult "EXTERNAL" T_STRING externalParametersPar ";"

    T_SYMBOL  shift, and go to state 12

    qname  go to state 14


State 5

    8 typeDefinition: "DEFINE" . T_SYMBOL ":" T_STRING "AS" typeDefinitionPropertiesEnclosed ";"
    9               | "DEFINE" . T_SYMBOL ":" T_STRING "AS" "EXTENSION" "OF" baseType typeDefinitionPropertiesEnclosed ";"
   10               | "DEFINE" . T_SYMBOL ":" T_STRING ";"
   11               | "DEFINE" . T_SYMBOL ":" T_STRING "AS" "EXTENSION" "OF" baseType ";"

    T_SYMBOL  shift, and go to state 15


State 6

   22 namespaceDeclaration: "CREATE" . "ALIAS" T_STRING "AS" T_STRING ";"

    "ALIAS"  shift, and go to state 16


State 7

    2 globals: globals global .

    $default  reduce using rule 2 (globals)


State 8

    3 global: import .

    $default  reduce using rule 3 (global)


State 9

    4 global: typeDefinition .

    $default  reduce using rule 4 (global)


State 10

    6 global: namespaceDeclaration .

    $default  reduce using rule 6 (global)


State 11

    5 global: program .

    $default  reduce using rule 5 (global)


State 12

  148 qname: T_SYMBOL .

    $default  reduce using rule 148 (qname)


State 13

    7 import: "IMPORT" qname . ";"
  149 qname: qname . "::" T_SYMBOL

    "::"  shift, and go to state 17
    ";"   shift, and go to state 18


State 14

   23 program: "PROGRAM" qname . parametersListPar statementsListBeginEnd ";"
   24        | "PROGRAM" qname . parametersListPar programResult statementsListBeginEnd ";"
   25        | "PROGRAM" qname . parametersListPar "EXTERNAL" T_STRING externalParametersPar ";"
   26        | "PROGRAM" qname . parametersListPar programResult "EXTERNAL" T_STRING externalParametersPar ";"
  149 qname: qname . "::" T_SYMBOL

    "("   shift, and go to state 19
    "::"  shift, and go to state 17

    parametersListPar  go to state 20


State 15

    8 typeDefinition: "DEFINE" T_SYMBOL . ":" T_STRING "AS" typeDefinitionPropertiesEnclosed ";"
    9               | "DEFINE" T_SYMBOL . ":" T_STRING "AS" "EXTENSION" "OF" baseType typeDefinitionPropertiesEnclosed ";"
   10               | "DEFINE" T_SYMBOL . ":" T_STRING ";"
   11               | "DEFINE" T_SYMBOL . ":" T_STRING "AS" "EXTENSION" "OF" baseType ";"

    ":"  shift, and go to state 21


State 16

   22 namespaceDeclaration: "CREATE" "ALIAS" . T_STRING "AS" T_STRING ";"

    T_STRING  shift, and go to state 22


State 17

  149 qname: qname "::" . T_SYMBOL

    T_SYMBOL  shift, and go to state 23


State 18

    7 import: "IMPORT" qname ";" .

    $default  reduce using rule 7 (import)


State 19

   31 parametersListPar: "(" . parametersList ")"
   32                  | "(" . ")"

    "VAR"  shift, and go to state 24
    ")"    shift, and go to state 25

    parametersList  go to state 26
    declaration     go to state 27


State 20

   23 program: "PROGRAM" qname parametersListPar . statementsListBeginEnd ";"
   24        | "PROGRAM" qname parametersListPar . programResult statementsListBeginEnd ";"
   25        | "PROGRAM" qname parametersListPar . "EXTERNAL" T_STRING externalParametersPar ";"
   26        | "PROGRAM" qname parametersListPar . programResult "EXTERNAL" T_STRING externalParametersPar ";"

    "BEGIN"     shift, and go to state 28
    "RETURNS"   shift, and go to state 29
    "EXTERNAL"  shift, and go to state 30

    programResult           go to state 31
    statementsListBeginEnd  go to state 32


State 21

    8 typeDefinition: "DEFINE" T_SYMBOL ":" . T_STRING "AS" typeDefinitionPropertiesEnclosed ";"
    9               | "DEFINE" T_SYMBOL ":" . T_STRING "AS" "EXTENSION" "OF" baseType typeDefinitionPropertiesEnclosed ";"
   10               | "DEFINE" T_SYMBOL ":" . T_STRING ";"
   11               | "DEFINE" T_SYMBOL ":" . T_STRING "AS" "EXTENSION" "OF" baseType ";"

    T_STRING  shift, and go to state 33


State 22

   22 namespaceDeclaration: "CREATE" "ALIAS" T_STRING . "AS" T_STRING ";"

    "AS"  shift, and go to state 34


State 23

  149 qname: qname "::" T_SYMBOL .

    $default  reduce using rule 149 (qname)


State 24

   39 declaration: "VAR" . T_SYMBOL "AS" T_SYMBOL
   40            | "VAR" . T_SYMBOL "AS" T_SYMBOL ":" T_STRING
   41            | "VAR" . T_SYMBOL "AS" "ARRAY" "OF" T_SYMBOL
   42            | "VAR" . T_SYMBOL "AS" "ARRAY" "OF" T_SYMBOL ":" T_STRING

    T_SYMBOL  shift, and go to state 35


State 25

   32 parametersListPar: "(" ")" .

    $default  reduce using rule 32 (parametersListPar)


State 26

   31 parametersListPar: "(" parametersList . ")"
   33 parametersList: parametersList . "," declaration

    ")"  shift, and go to state 36
    ","  shift, and go to state 37


State 27

   34 parametersList: declaration .

    $default  reduce using rule 34 (parametersList)


State 28

   35 statementsListBeginEnd: "BEGIN" . statementsList "END"

    $default  reduce using rule 38 (statementsList)

    statementsList  go to state 38


State 29

   27 programResult: "RETURNS" . T_SYMBOL
   28              | "RETURNS" . T_SYMBOL ":" T_STRING
   29              | "RETURNS" . "ARRAY" "OF" T_SYMBOL
   30              | "RETURNS" . "ARRAY" "OF" T_SYMBOL ":" T_STRING

    "ARRAY"   shift, and go to state 39
    T_SYMBOL  shift, and go to state 40


State 30

   25 program: "PROGRAM" qname parametersListPar "EXTERNAL" . T_STRING externalParametersPar ";"

    T_STRING  shift, and go to state 41


State 31

   24 program: "PROGRAM" qname parametersListPar programResult . statementsListBeginEnd ";"
   26        | "PROGRAM" qname parametersListPar programResult . "EXTERNAL" T_STRING externalParametersPar ";"

    "BEGIN"     shift, and go to state 28
    "EXTERNAL"  shift, and go to state 42

    statementsListBeginEnd  go to state 43


State 32

   23 program: "PROGRAM" qname parametersListPar statementsListBeginEnd . ";"

    ";"  shift, and go to state 44


State 33

    8 typeDefinition: "DEFINE" T_SYMBOL ":" T_STRING . "AS" typeDefinitionPropertiesEnclosed ";"
    9               | "DEFINE" T_SYMBOL ":" T_STRING . "AS" "EXTENSION" "OF" baseType typeDefinitionPropertiesEnclosed ";"
   10               | "DEFINE" T_SYMBOL ":" T_STRING . ";"
   11               | "DEFINE" T_SYMBOL ":" T_STRING . "AS" "EXTENSION" "OF" baseType ";"

    "AS"  shift, and go to state 45
    ";"   shift, and go to state 46


State 34

   22 namespaceDeclaration: "CREATE" "ALIAS" T_STRING "AS" . T_STRING ";"

    T_STRING  shift, and go to state 47


State 35

   39 declaration: "VAR" T_SYMBOL . "AS" T_SYMBOL
   40            | "VAR" T_SYMBOL . "AS" T_SYMBOL ":" T_STRING
   41            | "VAR" T_SYMBOL . "AS" "ARRAY" "OF" T_SYMBOL
   42            | "VAR" T_SYMBOL . "AS" "ARRAY" "OF" T_SYMBOL ":" T_STRING

    "AS"  shift, and go to state 48


State 36

   31 parametersListPar: "(" parametersList ")" .

    $default  reduce using rule 31 (parametersListPar)


State 37

   33 parametersList: parametersList "," . declaration

    "VAR"  shift, and go to state 24

    declaration  go to state 49


State 38

   35 statementsListBeginEnd: "BEGIN" statementsList . "END"
   36 statementsList: statementsList . statement ";"
   37               | statementsList . declaration ";"

    "BEGIN"     shift, and go to state 28
    "END"       shift, and go to state 50
    "SORT"      shift, and go to state 51
    "INDEX"     shift, and go to state 52
    "FOR"       shift, and go to state 53
    "WHILE"     shift, and go to state 54
    "IF"        shift, and go to state 55
    "RETURN"    shift, and go to state 56
    "THROW"     shift, and go to state 57
    "TRY"       shift, and go to state 58
    "WITH"      shift, and go to state 59
    "VAR"       shift, and go to state 24
    "("         shift, and go to state 60
    "NEW"       shift, and go to state 61
    "SIZEOF"    shift, and go to state 62
    "COPYOF"    shift, and go to state 63
    "DETACH"    shift, and go to state 64
    "CREATE"    shift, and go to state 65
    "DELETE"    shift, and go to state 66
    "EXTERNAL"  shift, and go to state 67
    "TYPE"      shift, and go to state 68
    "TYPENS"    shift, and go to state 69
    "STRLEN"    shift, and go to state 70
    "-"         shift, and go to state 71
    T_SYMBOL    shift, and go to state 72
    T_STRING    shift, and go to state 73
    T_INTEGER   shift, and go to state 74
    T_FLOAT     shift, and go to state 75
    T_BOOLEAN   shift, and go to state 76
    T_NULL      shift, and go to state 77

    statementsListBeginEnd  go to state 78
    declaration             go to state 79
    statement               go to state 80
    assignment              go to state 81
    condassign              go to state 82
    merge                   go to state 83
    lvalue                  go to state 84
    exprPrimary             go to state 85
    xpathAccess             go to state 86
    xpath                   go to state 87
    with                    go to state 88
    whileLoop               go to state 89
    forLoop                 go to state 90
    ifThenElse              go to state 91
    call                    go to state 92
    external                go to state 93
    create                  go to state 94
    delete                  go to state 95
    return                  go to state 96
    throw                   go to state 97
    sort                    go to state 98
    index                   go to state 99
    tryCatch                go to state 100
    qname                   go to state 101


State 39

   29 programResult: "RETURNS" "ARRAY" . "OF" T_SYMBOL
   30              | "RETURNS" "ARRAY" . "OF" T_SYMBOL ":" T_STRING

    "OF"  shift, and go to state 102


State 40

   27 programResult: "RETURNS" T_SYMBOL .
   28              | "RETURNS" T_SYMBOL . ":" T_STRING

    ":"  shift, and go to state 103

    $default  reduce using rule 27 (programResult)


State 41

   25 program: "PROGRAM" qname parametersListPar "EXTERNAL" T_STRING . externalParametersPar ";"

    "("  shift, and go to state 104

    externalParametersPar  go to state 105


State 42

   26 program: "PROGRAM" qname parametersListPar programResult "EXTERNAL" . T_STRING externalParametersPar ";"

    T_STRING  shift, and go to state 106


State 43

   24 program: "PROGRAM" qname parametersListPar programResult statementsListBeginEnd . ";"

    ";"  shift, and go to state 107


State 44

   23 program: "PROGRAM" qname parametersListPar statementsListBeginEnd ";" .

    $default  reduce using rule 23 (program)


State 45

    8 typeDefinition: "DEFINE" T_SYMBOL ":" T_STRING "AS" . typeDefinitionPropertiesEnclosed ";"
    9               | "DEFINE" T_SYMBOL ":" T_STRING "AS" . "EXTENSION" "OF" baseType typeDefinitionPropertiesEnclosed ";"
   11               | "DEFINE" T_SYMBOL ":" T_STRING "AS" . "EXTENSION" "OF" baseType ";"

    "BEGIN"      shift, and go to state 108
    "EXTENSION"  shift, and go to state 109

    typeDefinitionPropertiesEnclosed  go to state 110


State 46

   10 typeDefinition: "DEFINE" T_SYMBOL ":" T_STRING ";" .

    $default  reduce using rule 10 (typeDefinition)


State 47

   22 namespaceDeclaration: "CREATE" "ALIAS" T_STRING "AS" T_STRING . ";"

    ";"  shift, and go to state 111


State 48

   39 declaration: "VAR" T_SYMBOL "AS" . T_SYMBOL
   40            | "VAR" T_SYMBOL "AS" . T_SYMBOL ":" T_STRING
   41            | "VAR" T_SYMBOL "AS" . "ARRAY" "OF" T_SYMBOL
   42            | "VAR" T_SYMBOL "AS" . "ARRAY" "OF" T_SYMBOL ":" T_STRING

    "ARRAY"   shift, and go to state 112
    T_SYMBOL  shift, and go to state 113


State 49

   33 parametersList: parametersList "," declaration .

    $default  reduce using rule 33 (parametersList)


State 50

   35 statementsListBeginEnd: "BEGIN" statementsList "END" .

    $default  reduce using rule 35 (statementsListBeginEnd)


State 51

  134 sort: "SORT" . xpathAccess "USING" qname

    "("        shift, and go to state 60
    "NEW"      shift, and go to state 61
    "SIZEOF"   shift, and go to state 62
    "COPYOF"   shift, and go to state 63
    "DETACH"   shift, and go to state 64
    "TYPE"     shift, and go to state 68
    "TYPENS"   shift, and go to state 69
    "STRLEN"   shift, and go to state 70
    "-"        shift, and go to state 71
    T_SYMBOL   shift, and go to state 72
    T_STRING   shift, and go to state 73
    T_INTEGER  shift, and go to state 74
    T_FLOAT    shift, and go to state 75
    T_BOOLEAN  shift, and go to state 76
    T_NULL     shift, and go to state 77

    exprPrimary  go to state 85
    xpathAccess  go to state 114
    xpath        go to state 87
    qname        go to state 115


State 52

  135 index: "INDEX" . xpathAccess "USING" xpathAccess

    "("        shift, and go to state 60
    "NEW"      shift, and go to state 61
    "SIZEOF"   shift, and go to state 62
    "COPYOF"   shift, and go to state 63
    "DETACH"   shift, and go to state 64
    "TYPE"     shift, and go to state 68
    "TYPENS"   shift, and go to state 69
    "STRLEN"   shift, and go to state 70
    "-"        shift, and go to state 71
    T_SYMBOL   shift, and go to state 72
    T_STRING   shift, and go to state 73
    T_INTEGER  shift, and go to state 74
    T_FLOAT    shift, and go to state 75
    T_BOOLEAN  shift, and go to state 76
    T_NULL     shift, and go to state 77

    exprPrimary  go to state 85
    xpathAccess  go to state 116
    xpath        go to state 87
    qname        go to state 115


State 53

  122 forLoop: "FOR" . xpathAccess "= (assignment)" expr "TO" expr "DO" statement
  123        | "FOR" . xpathAccess "= (assignment)" expr "TO" expr "STEP" expr "DO" statement

    "("        shift, and go to state 60
    "NEW"      shift, and go to state 61
    "SIZEOF"   shift, and go to state 62
    "COPYOF"   shift, and go to state 63
    "DETACH"   shift, and go to state 64
    "TYPE"     shift, and go to state 68
    "TYPENS"   shift, and go to state 69
    "STRLEN"   shift, and go to state 70
    "-"        shift, and go to state 71
    T_SYMBOL   shift, and go to state 72
    T_STRING   shift, and go to state 73
    T_INTEGER  shift, and go to state 74
    T_FLOAT    shift, and go to state 75
    T_BOOLEAN  shift, and go to state 76
    T_NULL     shift, and go to state 77

    exprPrimary  go to state 85
    xpathAccess  go to state 117
    xpath        go to state 87
    qname        go to state 115


State 54

  121 whileLoop: "WHILE" . logicalExpr "DO" statement

    "NOT"      shift, and go to state 118
    "("        shift, and go to state 119
    "NEW"      shift, and go to state 61
    "SIZEOF"   shift, and go to state 62
    "COPYOF"   shift, and go to state 63
    "DETACH"   shift, and go to state 64
    "TYPE"     shift, and go to state 68
    "TYPENS"   shift, and go to state 69
    "ISSET"    shift, and go to state 120
    "ISNULL"   shift, and go to state 121
    "STRLEN"   shift, and go to state 70
    "-"        shift, and go to state 71
    T_SYMBOL   shift, and go to state 72
    T_STRING   shift, and go to state 73
    T_INTEGER  shift, and go to state 74
    T_FLOAT    shift, and go to state 75
    T_BOOLEAN  shift, and go to state 76
    T_NULL     shift, and go to state 77

    expr                go to state 122
    exprTerm            go to state 123
    exprFactor          go to state 124
    exprPrimaryOrXPath  go to state 125
    exprPrimary         go to state 126
    relationalOper      go to state 127
    logicalExprPrimary  go to state 128
    logicalExprFactor   go to state 129
    logicalExprTerm     go to state 130
    logicalExpr         go to state 131
    xpathAccess         go to state 132
    xpath               go to state 87
    qname               go to state 115


State 55

  124 ifThenElse: "IF" . logicalExpr "THEN" statement
  125           | "IF" . logicalExpr "THEN" statement "ELSE" statement

    "NOT"      shift, and go to state 118
    "("        shift, and go to state 119
    "NEW"      shift, and go to state 61
    "SIZEOF"   shift, and go to state 62
    "COPYOF"   shift, and go to state 63
    "DETACH"   shift, and go to state 64
    "TYPE"     shift, and go to state 68
    "TYPENS"   shift, and go to state 69
    "ISSET"    shift, and go to state 120
    "ISNULL"   shift, and go to state 121
    "STRLEN"   shift, and go to state 70
    "-"        shift, and go to state 71
    T_SYMBOL   shift, and go to state 72
    T_STRING   shift, and go to state 73
    T_INTEGER  shift, and go to state 74
    T_FLOAT    shift, and go to state 75
    T_BOOLEAN  shift, and go to state 76
    T_NULL     shift, and go to state 77

    expr                go to state 122
    exprTerm            go to state 123
    exprFactor          go to state 124
    exprPrimaryOrXPath  go to state 125
    exprPrimary         go to state 126
    relationalOper      go to state 127
    logicalExprPrimary  go to state 128
    logicalExprFactor   go to state 129
    logicalExprTerm     go to state 130
    logicalExpr         go to state 133
    xpathAccess         go to state 132
    xpath               go to state 87
    qname               go to state 115


State 56

  131 return: "RETURN" .
  132       | "RETURN" . expr

    "("        shift, and go to state 60
    "NEW"      shift, and go to state 61
    "SIZEOF"   shift, and go to state 62
    "COPYOF"   shift, and go to state 63
    "DETACH"   shift, and go to state 64
    "TYPE"     shift, and go to state 68
    "TYPENS"   shift, and go to state 69
    "STRLEN"   shift, and go to state 70
    "-"        shift, and go to state 71
    T_SYMBOL   shift, and go to state 72
    T_STRING   shift, and go to state 73
    T_INTEGER  shift, and go to state 74
    T_FLOAT    shift, and go to state 75
    T_BOOLEAN  shift, and go to state 76
    T_NULL     shift, and go to state 77

    $default  reduce using rule 131 (return)

    expr                go to state 134
    exprTerm            go to state 123
    exprFactor          go to state 124
    exprPrimaryOrXPath  go to state 125
    exprPrimary         go to state 126
    xpathAccess         go to state 132
    xpath               go to state 87
    qname               go to state 115


State 57

  133 throw: "THROW" . expr

    "("        shift, and go to state 60
    "NEW"      shift, and go to state 61
    "SIZEOF"   shift, and go to state 62
    "COPYOF"   shift, and go to state 63
    "DETACH"   shift, and go to state 64
    "TYPE"     shift, and go to state 68
    "TYPENS"   shift, and go to state 69
    "STRLEN"   shift, and go to state 70
    "-"        shift, and go to state 71
    T_SYMBOL   shift, and go to state 72
    T_STRING   shift, and go to state 73
    T_INTEGER  shift, and go to state 74
    T_FLOAT    shift, and go to state 75
    T_BOOLEAN  shift, and go to state 76
    T_NULL     shift, and go to state 77
